--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -178,12 +178,20 @@ jobs:
         uses: actions/checkout@v4
       - name: Install GitHub Artifact Client
         uses: lhotari/gh-actions-artifact-client@v2
-      - name: Install musl libc
-        run: |
-          sudo apt update
-          sudo apt install --yes --no-install-recommends build-essential musl-tools musl-dev
       - name: Install Zig
         uses: mlugg/setup-zig@v2
+      - name: Generate Cache Key
+        run: cargo generate-lockfile
+      - name: Restore Cargo Cache
+        id: restore-cargo-cache
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+            .easytier
+          key: cargo-targets
       - name: Install cargo-zigbuild
         run: cargo install cargo-zigbuild --force
       - name: Install Rust Toolchains
@@ -194,6 +202,15 @@ jobs:
           cargo +nightly zigbuild --release --target $(echo $(echo "$targets" | tr '\n' ' ') | sed 's/ / --target /g')
         env:
           RUSTFLAGS: -Cpanic=abort
+      - name: Generate Cargo Cache
+        uses: actions/cache/save@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+            .easytier
+          key: ${{ steps.restore-cargo-cache.outputs.cache-primary-key }}
       - name: Upload Artifact
         run: |
           # RISC-V 64
